@@ -994,7 +994,6 @@ hr {
 
 .minvh {
   min-height: 100vh;
-  min-height: -webkit-fill-available;
 }
 
 .row {
@@ -1162,62 +1161,42 @@ hr {
 
 .span0 {
   flex: 0;
-  min-width: 0;
-  min-height: 0;
 }
 
 .span1 {
   flex: 1;
-  min-width: 0;
-  min-height: 0;
 }
 
 .span2 {
   flex: 2;
-  min-width: 0;
-  min-height: 0;
 }
 
 .span3 {
   flex: 3;
-  min-width: 0;
-  min-height: 0;
 }
 
 .span4 {
   flex: 4;
-  min-width: 0;
-  min-height: 0;
 }
 
 .span5 {
   flex: 5;
-  min-width: 0;
-  min-height: 0;
 }
 
 .span6 {
   flex: 6;
-  min-width: 0;
-  min-height: 0;
 }
 
 .span7 {
   flex: 7;
-  min-width: 0;
-  min-height: 0;
 }
 
 .span8 {
   flex: 8;
-  min-width: 0;
-  min-height: 0;
 }
 
 .span9 {
   flex: 9;
-  min-width: 0;
-  min-height: 0;
 }
 
 .span-auto {
