@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="../css/abrusco.css">
 </head>
-<body class="col">
+<body class="minvh col">
 
   <header class="bg-yellow">
     <div class="max48 mx p2">
@@ -16,18 +16,9 @@
   <main class="span1 bg-orange">
     <div class="max48 mx p2">
 
-      <div class="lh4">
+      <div class="copy lh4">
         <h2>Hello</h2>
-        <p class="mt1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam enim arcu, dapibus in porttitor maximus, auctor ut sapien. Phasellus scelerisque enim vel libero ullamcorper ornare. Praesent a purus ac erat ultricies aliquam luctus vitae magna. Suspendisse pretium purus ac ex molestie, id tempor eros condimentum. Suspendisse ac enim sodales, commodo dui a, lobortis metus. Donec feugiat dapibus purus, in consectetur mi consectetur at. Duis rutrum justo lorem, non dictum ligula posuere sed.</p>
-        <p class="mt1">Etiam diam odio, rutrum sit amet lectus id, fermentum tristique sapien. Nam ut risus mauris. Aliquam imperdiet arcu tortor, ultricies convallis mauris tincidunt in. Maecenas pellentesque nisi vel porta sagittis. Aliquam ultricies magna sit amet sem vehicula euismod. Praesent diam tellus, mollis eu purus et, tristique viverra sapien. Praesent enim arcu, malesuada nec elementum eu, pretium a mauris. In hac habitasse platea dictumst. Pellentesque a porttitor ante. Curabitur viverra, magna eu finibus commodo, quam sapien venenatis nulla, eu luctus sapien elit ullamcorper tellus. Cras auctor feugiat nibh, eget tempor nunc aliquet nec.</p>
-        <p class="mt1">Etiam nulla augue, ullamcorper in facilisis nec, consequat in nulla. Vestibulum facilisis convallis vestibulum. Nulla mattis sem eget ornare cursus. Aenean commodo mi vitae faucibus hendrerit. Phasellus nec gravida lectus, eget rhoncus velit. Quisque sit amet neque vitae urna tempus condimentum. Nulla tristique nulla id urna congue dictum. Curabitur pulvinar quam eget risus eleifend, in ornare metus rhoncus. Donec vestibulum erat id dolor sagittis, ac pulvinar odio feugiat. In at iaculis eros. Donec viverra placerat lorem, sed pretium ex viverra vel.</p>
-        <p class="mt1">In tristique vehicula eros, sit amet interdum nulla sagittis nec. Nunc interdum massa ligula, in pretium mauris imperdiet et. Nunc lectus erat, ultrices nec mi vitae, bibendum vestibulum purus. Mauris porta cursus sem, et tempor tellus blandit venenatis. Duis luctus vitae diam ut lacinia. Integer convallis libero sit amet magna tempor varius. Cras accumsan lorem sed blandit congue. Quisque et ipsum posuere, consectetur dui ut, scelerisque erat. Quisque a ex ultricies, consequat tortor rutrum, lacinia neque. Ut sit amet leo id turpis condimentum iaculis quis nec augue.</p>
-        <p class="mt1">Donec nisi est, efficitur at ipsum a, pulvinar volutpat ipsum. Nulla facilisi. Sed posuere nec turpis et interdum. Donec eget urna tempus, tristique magna sed, lobortis felis. Sed lacinia purus sit amet vestibulum mollis. Cras sit amet eleifend sem, id malesuada nibh. Mauris elementum nisl sed velit scelerisque semper.</p>
-        <p class="mt1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam enim arcu, dapibus in porttitor maximus, auctor ut sapien. Phasellus scelerisque enim vel libero ullamcorper ornare. Praesent a purus ac erat ultricies aliquam luctus vitae magna. Suspendisse pretium purus ac ex molestie, id tempor eros condimentum. Suspendisse ac enim sodales, commodo dui a, lobortis metus. Donec feugiat dapibus purus, in consectetur mi consectetur at. Duis rutrum justo lorem, non dictum ligula posuere sed.</p>
-        <p class="mt1">Etiam diam odio, rutrum sit amet lectus id, fermentum tristique sapien. Nam ut risus mauris. Aliquam imperdiet arcu tortor, ultricies convallis mauris tincidunt in. Maecenas pellentesque nisi vel porta sagittis. Aliquam ultricies magna sit amet sem vehicula euismod. Praesent diam tellus, mollis eu purus et, tristique viverra sapien. Praesent enim arcu, malesuada nec elementum eu, pretium a mauris. In hac habitasse platea dictumst. Pellentesque a porttitor ante. Curabitur viverra, magna eu finibus commodo, quam sapien venenatis nulla, eu luctus sapien elit ullamcorper tellus. Cras auctor feugiat nibh, eget tempor nunc aliquet nec.</p>
-        <p class="mt1">Etiam nulla augue, ullamcorper in facilisis nec, consequat in nulla. Vestibulum facilisis convallis vestibulum. Nulla mattis sem eget ornare cursus. Aenean commodo mi vitae faucibus hendrerit. Phasellus nec gravida lectus, eget rhoncus velit. Quisque sit amet neque vitae urna tempus condimentum. Nulla tristique nulla id urna congue dictum. Curabitur pulvinar quam eget risus eleifend, in ornare metus rhoncus. Donec vestibulum erat id dolor sagittis, ac pulvinar odio feugiat. In at iaculis eros. Donec viverra placerat lorem, sed pretium ex viverra vel.</p>
-        <p class="mt1">In tristique vehicula eros, sit amet interdum nulla sagittis nec. Nunc interdum massa ligula, in pretium mauris imperdiet et. Nunc lectus erat, ultrices nec mi vitae, bibendum vestibulum purus. Mauris porta cursus sem, et tempor tellus blandit venenatis. Duis luctus vitae diam ut lacinia. Integer convallis libero sit amet magna tempor varius. Cras accumsan lorem sed blandit congue. Quisque et ipsum posuere, consectetur dui ut, scelerisque erat. Quisque a ex ultricies, consequat tortor rutrum, lacinia neque. Ut sit amet leo id turpis condimentum iaculis quis nec augue.</p>
-        <p class="mt1">Donec nisi est, efficitur at ipsum a, pulvinar volutpat ipsum. Nulla facilisi. Sed posuere nec turpis et interdum. Donec eget urna tempus, tristique magna sed, lobortis felis. Sed lacinia purus sit amet vestibulum mollis. Cras sit amet eleifend sem, id malesuada nibh. Mauris elementum nisl sed velit scelerisque semper.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam enim arcu, dapibus in porttitor maximus, auctor ut sapien. Phasellus scelerisque enim vel libero ullamcorper ornare. Praesent a purus ac erat ultricies aliquam luctus vitae magna. Suspendisse pretium purus ac ex molestie, id tempor eros condimentum. Suspendisse ac enim sodales, commodo dui a, lobortis metus. Donec feugiat dapibus purus, in consectetur mi consectetur at. Duis rutrum justo lorem, non dictum ligula posuere sed.</p>
       </div>
 
     </div>
